DAR-1152: prevent toolbar from overlapping expand toggle.

--- a/extensions/wikia/EditPageLayout/css/core/toolbar.scss
+++ b/extensions/wikia/EditPageLayout/css/core/toolbar.scss
@@ -15,9 +15,11 @@
 			padding-top: 5px;
 		}
 	}
+
 	.editpage-toolbar .cke_buttons {
 		padding: 2px 0 1px;
 	}
+
 	.cke_toolbar_expand {
 		> a {
 			color: $color-text;
@@ -56,6 +58,10 @@
 		float: left;
 		margin-top: 23px;
 		margin-left: 10px;
+	}
+
+	.cke_toolbar_format {
+		margin-right: 30px;
 	}
 
 	.cke_toolbar_widescreen {
